name:          distributed-process-tests
version:       0.4.11
synopsis:      Tests and test support tools for distributed-process.
homepage:      http://github.com/haskell-distributed/distributed-process/tree/master/distributed-process-tests
description:   Tests and test suite for Cloud Haskell libraries.
license:       BSD3
license-file:  LICENSE
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries
Maintainer:    Facundo Domínguez <facundo.dominguez@tweag.io>
copyright:     Well-Typed LLP
category:      Control, Cloud Haskell
build-type:    Simple
cabal-version: >=1.8

flag tcp
  Description: build and run TCP tests
  Default:     False

library
  exposed-modules:   Network.Transport.Test
                     Control.Distributed.Process.Tests.CH
                     Control.Distributed.Process.Tests.Closure
                     Control.Distributed.Process.Tests.Mx
                     Control.Distributed.Process.Tests.Receive
                     Control.Distributed.Process.Tests.Stats
                     Control.Distributed.Process.Tests.Tracing
                     Control.Distributed.Process.Tests.Internal.Utils
  Build-Depends:     base >= 4.4 && < 5,
                     ansi-terminal >= 0.5,
                     binary >= 0.5 && < 0.9,
                     bytestring >= 0.9 && < 0.12,
                     distributed-process >= 0.6.0 && < 0.8,
                     distributed-static,
                     HUnit >= 1.2 && < 1.7,
                     network-transport >= 0.4.1.0 && < 0.6,
                     network >= 2.5 && < 2.7,
                     random >= 1.0 && < 1.2,
                     rematch >= 0.1.2.1,
                     setenv >= 0.1.1.3,
                     test-framework >= 0.6 && < 0.9,
                     test-framework-hunit >= 0.2.0 && < 0.4,
                     stm
  hs-source-dirs:    src
  ghc-options:       -Wall -fno-warn-unused-do-bind
  extensions:        CPP,
                     ExistentialQuantification,
                     FlexibleInstances,
                     DeriveDataTypeable,
                     DeriveGeneric,
                     GeneralizedNewtypeDeriving,
                     RankNTypes,
                     RecordWildCards,
                     ScopedTypeVariables
  if impl(ghc <= 7.4.2)
    Build-Depends:   ghc-prim == 0.2.0.0

Test-Suite TestCHInMemory
  Type:              exitcode-stdio-1.0
  Main-Is:           runInMemory.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.CH
  Build-Depends:     base >= 4.4 && < 5,
                     distributed-process-tests,
                     network >= 2.3 && < 2.7,
                     network-transport >= 0.4.1.0 && < 0.6,
                     network-transport-inmemory >= 0.5,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -threaded -eventlog -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests

Test-Suite TestCHInTCP
  Type:              exitcode-stdio-1.0
  Main-Is:           runTCP.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.CH
  if flag(tcp)
    Build-Depends:     base >= 4.4 && < 5,
                       distributed-process-tests,
                       network >= 2.3 && < 2.7,
                       network-transport >= 0.4.1.0 && < 0.6,
                       network-transport-tcp >= 0.5 && < 0.7,
                       test-framework >= 0.6 && < 0.9
  else
    Buildable:       False
  Extensions:        CPP
  ghc-options:       -Wall -threaded -eventlog -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests


Test-Suite TestClosure
  Type:              exitcode-stdio-1.0
  Main-Is:           runInMemory.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Closure
  Build-Depends:     base >= 4.4 && < 5,
                     distributed-process-tests,
                     network >= 2.3 && < 2.7,
                     network-transport >= 0.4.1.0 && < 0.6,
                     network-transport-inmemory >= 0.5,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests

Test-Suite TestStats
  Type:              exitcode-stdio-1.0
  Main-Is:           runInMemory.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Stats
  Build-Depends:     base >= 4.4 && < 5,
                     distributed-process-tests,
                     network >= 2.3 && < 2.7,
                     network-transport >= 0.4.1.0 && < 0.6,
                     network-transport-inmemory >= 0.5,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -eventlog -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests


Test-Suite TestMx
  Type:              exitcode-stdio-1.0
  Main-Is:           runInMemory.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Mx
  Build-Depends:     base >= 4.4 && < 5,
                     distributed-process-tests,
                     network >= 2.3 && < 2.7,
                     network-transport >= 0.4.1.0 && < 0.6,
                     network-transport-inmemory >= 0.5,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests

Test-Suite TestTracing
  Type:              exitcode-stdio-1.0
  Main-Is:           runInMemory.hs
  CPP-Options:       -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Tracing
  Build-Depends:     base >= 4.4 && < 5,
                     distributed-process-tests,
                     network >= 2.3 && < 2.7,
                     network-transport >= 0.4.1.0 && < 0.6,
                     network-transport-inmemory >= 0.5,
                     test-framework >= 0.6 && < 0.9
  Extensions:        CPP
  ghc-options:       -Wall -eventlog -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:    tests
