Name:                distributed-process
Version:             0.1.0
Description:         Distributed processes for message based concurrency.
License:             BSD3
License-file:        LICENSE
Author:              Duncan Coutts, Nicolas Wu, Edsko de Vries
Maintainer:          duncan@well-typed.com
Homepage:            http://github.com/haskell-distributed/
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
  Build-Depends:     base >= 3 && < 5,
                     bytestring >= 0.9,
                     containers >= 0.4,
                     mtl >= 2.0,
                     binary,
                     transformers,
                     data-accessor,
                     random,
                     template-haskell,
                     stm,
                     network-transport >= 0.1
  Exposed-modules:   Control.Distributed.Process,
                     Control.Distributed.Process.Serializable,
                     Control.Distributed.Process.Closure,
                     Control.Distributed.Process.Node
  Extensions:        ExplicitForAll, ScopedTypeVariables, GeneralizedNewtypeDeriving, FlexibleInstances, UndecidableInstances, MultiParamTypeClasses, DeriveDataTypeable, TemplateHaskell, ExistentialQuantification
  ghc-options:       -Wall
  HS-Source-Dirs:    src

Test-Suite TestCH
  Type:              exitcode-stdio-1.0
  Main-Is:           TestCH.hs
  Build-Depends:     base,
                     bytestring,
                     containers,
                     mtl,
                     binary,
                     transformers,
                     data-accessor,
                     random,
                     ansi-terminal,
                     template-haskell,
                     stm,
                     network-transport >= 0.1
  Extensions:        ExplicitForAll, ScopedTypeVariables, GeneralizedNewtypeDeriving, FlexibleInstances, UndecidableInstances, MultiParamTypeClasses, DeriveDataTypeable, TemplateHaskell, ExistentialQuantification
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind 
  HS-Source-Dirs:    tests src

-- Separate test suite for tests that involve closures, as this will be replaced
-- once we have proper support for 'static'
Test-Suite TestClosure
  Type:              exitcode-stdio-1.0
  Main-Is:           TestClosure.hs
  Build-Depends:     base,
                     bytestring,
                     containers,
                     mtl,
                     binary,
                     transformers,
                     data-accessor,
                     random,
                     ansi-terminal,
                     template-haskell,
                     stm,
                     network-transport >= 0.1
  Extensions:        ExplicitForAll, ScopedTypeVariables, GeneralizedNewtypeDeriving, FlexibleInstances, UndecidableInstances, MultiParamTypeClasses, DeriveDataTypeable, TemplateHaskell, ExistentialQuantification
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind 
  HS-Source-Dirs:    tests src
