Name:          distributed-process 
Version:       0.2.1.1
Cabal-Version: >=1.8
Build-Type:    Simple
License:       BSD3 
License-File:  LICENSE
Copyright:     Well-Typed LLP
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries
Maintainer:    edsko@well-typed.com, dcoutts@well-typed.com
Stability:     experimental
Homepage:      http://github.com/haskell-distributed/distributed-process
Bug-Reports:   mailto:edsko@well-typed.com
Synopsis:      Cloud Haskell: Erlang-style concurrency in Haskell 
Description:   This is an implementation of Cloud Haskell, as described in
               /Towards Haskell in the Cloud/ by Jeff Epstein, Andrew Black,
               and Simon Peyton Jones
               (<http://research.microsoft.com/en-us/um/people/simonpj/papers/parallel/>),
               although some of the details are different. The precise message
               passing semantics are based on /A unified semantics for future Erlang/
               by	Hans Svensson, Lars-Åke Fredlund and Clara Benac Earle.

               You will probably also want to install a Cloud Haskell backend such
               as distributed-process-simplelocalnet.
Tested-With:   GHC==7.2.2 GHC==7.4.1 GHC==7.4.2
Category:      Control 

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-distributed/distributed-process
  SubDir:   distributed-process

Library
  Build-Depends:     base >= 4.4 && < 5,
                     binary >= 0.5 && < 0.6,
                     network-transport >= 0.2 && < 0.3,
                     stm >= 2.3 && < 2.5,
                     transformers >= 0.2 && < 0.4,
                     mtl >= 2.0 && < 2.2,
                     data-accessor >= 0.2 && < 0.3,
                     bytestring >= 0.9 && < 0.10,
                     containers >= 0.4 && < 0.5,
                     old-locale >= 1.0 && < 1.1,
                     time >= 1.2 && < 1.5,
                     template-haskell >= 2.6 && < 2.8,
                     random >= 1.0 && < 1.1,
                     ghc-prim >= 0.2 && < 0.3
  Exposed-modules:   Control.Distributed.Process,
                     Control.Distributed.Process.Serializable,
                     Control.Distributed.Process.Closure,
                     Control.Distributed.Process.Node,
                     Control.Distributed.Process.Internal.Primitives,
                     Control.Distributed.Process.Internal.CQueue,
                     Control.Distributed.Process.Internal.Dynamic,
                     Control.Distributed.Process.Internal.TypeRep,
                     Control.Distributed.Process.Internal.MessageT,
                     Control.Distributed.Process.Internal.Types,
                     Control.Distributed.Process.Internal.Closure.Static,
                     Control.Distributed.Process.Internal.Closure.MkClosure,
                     Control.Distributed.Process.Internal.Closure.CP,
                     Control.Distributed.Process.Internal.Closure.TH,
                     Control.Distributed.Process.Internal.Closure.Resolution,
                     Control.Distributed.Process.Internal.Node
  Extensions:        RankNTypes,
                     ScopedTypeVariables,
                     FlexibleInstances,
                     UndecidableInstances,
                     ExistentialQuantification,
                     GADTs,
                     GeneralizedNewtypeDeriving,
                     DeriveDataTypeable,
                     TemplateHaskell
  ghc-options:       -Wall
  HS-Source-Dirs:    src

Test-Suite TestCH
  Type:              exitcode-stdio-1.0
  Main-Is:           TestCH.hs
  Build-Depends:     base >= 4.4 && < 5,
                     binary >= 0.5 && < 0.6,
                     network-transport >= 0.2 && < 0.3,
                     network-transport-tcp >= 0.2 && < 0.3,
                     stm >= 2.3 && < 2.5,
                     transformers >= 0.2 && < 0.4,
                     mtl >= 2.0 && < 2.2,
                     data-accessor >= 0.2 && < 0.3,
                     bytestring >= 0.9 && < 0.10,
                     containers >= 0.4 && < 0.5,
                     old-locale >= 1.0 && < 1.1,
                     time >= 1.2 && < 1.5,
                     template-haskell >= 2.6 && < 2.8,
                     random >= 1.0 && < 1.1,
                     ghc-prim >= 0.2 && < 0.3,
                     ansi-terminal >= 0.5 && < 0.6
  Extensions:        RankNTypes,
                     ScopedTypeVariables,
                     FlexibleInstances,
                     UndecidableInstances,
                     ExistentialQuantification,
                     GADTs,
                     GeneralizedNewtypeDeriving,
                     DeriveDataTypeable,
                     TemplateHaskell
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind 
  HS-Source-Dirs:    tests src

Test-Suite TestClosure
  Type:              exitcode-stdio-1.0
  Main-Is:           TestClosure.hs
  Build-Depends:     base >= 4.4 && < 5,
                     binary >= 0.5 && < 0.6,
                     network-transport >= 0.2 && < 0.3,
                     network-transport-tcp >= 0.2 && < 0.3,
                     stm >= 2.3 && < 2.5,
                     transformers >= 0.2 && < 0.4,
                     mtl >= 2.0 && < 2.2,
                     data-accessor >= 0.2 && < 0.3,
                     bytestring >= 0.9 && < 0.10,
                     containers >= 0.4 && < 0.5,
                     old-locale >= 1.0 && < 1.1,
                     time >= 1.2 && < 1.5,
                     template-haskell >= 2.6 && < 2.8,
                     random >= 1.0 && < 1.1,
                     ghc-prim >= 0.2 && < 0.3,
                     ansi-terminal >= 0.5 && < 0.6
  Extensions:        RankNTypes,
                     ScopedTypeVariables,
                     FlexibleInstances,
                     UndecidableInstances,
                     ExistentialQuantification,
                     GADTs,
                     GeneralizedNewtypeDeriving,
                     DeriveDataTypeable,
                     TemplateHaskell
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind 
  HS-Source-Dirs:    tests src
