Name:          network-transport
Version:       0.1.0
Description:   Network Transport 
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries
Maintainer:    dcoutts@well-typed.com
Homepage:      http://github.com/haskell-distributed
Build-Type:    Simple
Cabal-Version: >=1.9.2

Library
  Build-Depends:   base,
                   bytestring,
                   containers,
                   data-lens,
                   network,
                   regex-applicative,
                   mtl,
                   transformers
  Exposed-modules: Network.Transport,
                   Network.Transport.Chan,
                   Network.Transport.TCP,
                   Network.Transport.Util
  extensions:      EmptyDataDecls, OverloadedStrings, ForeignFunctionInterface, FlexibleContexts, BangPatterns
  ghc-options:     -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs:  src

Test-Suite TestTCP 
  Type:           exitcode-stdio-1.0
  Main-Is:        TestTCP.hs
  Build-Depends:  base,
                  containers,
                  bytestring,
                  data-lens,
                  network,
                  regex-applicative,
                  mtl,
                  transformers,
                  ansi-terminal
  extensions:     EmptyDataDecls, OverloadedStrings, ForeignFunctionInterface, FlexibleContexts, BangPatterns
  ghc-options:    -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs: tests src

Test-Suite TestMulticastInMemory 
  Type:           exitcode-stdio-1.0
  Main-Is:        TestMulticastInMemory.hs
  Build-Depends:  base,
                  containers,
                  bytestring,
                  data-lens,
                  mtl,
                  transformers,
                  ansi-terminal
  extensions:     EmptyDataDecls, OverloadedStrings, ForeignFunctionInterface, FlexibleContexts, BangPatterns
  ghc-options:    -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs: tests src

Test-Suite TestInMemory 
  Type:           exitcode-stdio-1.0
  Main-Is:        TestInMemory.hs
  Build-Depends:  base,
                  containers,
                  bytestring,
                  data-lens,
                  mtl,
                  transformers,
                  ansi-terminal
  extensions:     EmptyDataDecls, OverloadedStrings, ForeignFunctionInterface, FlexibleContexts, BangPatterns
  ghc-options:    -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs: tests src
