Name:          network-transport-tcp
Version:       0.3.0
Cabal-Version: >=1.8
Build-Type:    Simple
License:       BSD3 
License-file:  LICENSE
Copyright:     Well-Typed LLP
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries
Maintainer:    edsko@well-typed.com, dcoutts@well-typed.com
Stability:     experimental
Homepage:      http://github.com/haskell-distributed/distributed-process
Bug-Reports:   mailto:edsko@well-typed.com
Synopsis:      TCP instantiation of Network.Transport
Description:   TCP instantiation of Network.Transport  
Tested-With:   GHC==7.0.4 GHC==7.2.2 GHC==7.4.1 GHC==7.4.2
Category:      Network  

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-distributed/distributed-process
  SubDir:   network-transport-tcp

Library
  Build-Depends:   base >= 4.3 && < 5,
                   network-transport >= 0.3 && < 0.4,
                   data-accessor >= 0.2 && < 0.3,
                   containers >= 0.4 && < 0.6,
                   bytestring >= 0.9 && < 0.11,
                   network >= 2.3 && < 2.5
  Exposed-modules: Network.Transport.TCP,
                   Network.Transport.TCP.Internal
  Extensions:      CPP
  ghc-options:     -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs:  src

Test-Suite TestTCP 
  Type:            exitcode-stdio-1.0
  Main-Is:         TestTCP.hs
  Build-Depends:   base >= 4.3 && < 5,
                   network-transport-tests >= 0.1 && < 0.2,
                   network >= 2.3 && < 2.5,
                   network-transport >= 0.3 && < 0.4,
                   network-transport-tcp >= 0.3 && < 0.4
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
  HS-Source-Dirs:  tests
  Extensions:      CPP,
                   OverloadedStrings
